# prophet-laplace

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: CNAME  demo.html  index.html
src/prophet_laplace/: __init__.py  sandwich.py
src/prophet_skaters/: __init__.py
tests/: test_sandwich.py
