[project]
name = "prophet-skaters"
version = "0.0.1"
description = "Prophet in a laplace sandwich: same API, calibrated densities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["prophet>=1.1", "skaters>=0.13.0", "pandas"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
